[gd_scene load_steps=4 format=3 uid="uid://cjhahq7mv41dh"]

[ext_resource type="Script" path="res://menu.gd" id="1_8tbcu"]

[sub_resource type="LabelSettings" id="LabelSettings_jdabu"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_11ft5"]
font_size = 28

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
script = ExtResource("1_8tbcu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -100.0
offset_right = 125.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
text = "PLAY"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../PlayButton")
text = "EXIT"

[node name="Options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsGrid" type="GridContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.5
offset_top = -44.0
offset_right = 179.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="DifficultyLabel" type="Label" parent="Options/OptionsGrid"]
layout_mode = 2
text = "DIFFICULTY"
label_settings = SubResource("LabelSettings_jdabu")
vertical_alignment = 1

[node name="DifficultyChosen" type="Button" parent="Options/OptionsGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../BackButton")
focus_neighbor_bottom = NodePath("../VolumeScrollBar")
text = "NORMAL"
expand_icon = true

[node name="VolumeLabel" type="Label" parent="Options/OptionsGrid"]
layout_mode = 2
text = "VOLUME"
label_settings = SubResource("LabelSettings_11ft5")
vertical_alignment = 1

[node name="VolumeScrollBar" type="HScrollBar" parent="Options/OptionsGrid"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../DifficultyChosen")
focus_neighbor_bottom = NodePath("../../BackButton")
max_value = 10.0
step = 1.0
value = 10.0

[node name="BackButton" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -46.0
offset_right = 25.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_top = NodePath("../OptionsGrid/VolumeScrollBar")
focus_neighbor_bottom = NodePath("../OptionsGrid/DifficultyChosen")
text = "BACK"

[node name="DifficultyContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 937.0
offset_top = 318.0
offset_right = 1087.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2

[node name="NormalButton" type="Button" parent="DifficultyContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../TryhardButton")
text = "NORMAL"

[node name="TryhardButton" type="Button" parent="DifficultyContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../NormalButton")
text = "TRYHARD"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Options/OptionsGrid/DifficultyChosen" to="." method="_on_difficulty_chosen_pressed"]
[connection signal="value_changed" from="Options/OptionsGrid/VolumeScrollBar" to="." method="_on_volume_scroll_bar_value_changed"]
[connection signal="pressed" from="Options/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="DifficultyContainer/NormalButton" to="." method="_on_normal_button_pressed"]
[connection signal="pressed" from="DifficultyContainer/TryhardButton" to="." method="_on_tryhard_button_pressed"]
